--- a/app/src/main/res/layout/fragment_amphibian_detail.xml
+++ b/app/src/main/res/layout/fragment_amphibian_detail.xml
@@ -29,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- <CHECK> -->
         <!-- TODO: set the text to the name from the single Amphibian object in the view model -->
         <TextView
             android:id="@+id/name"
@@ -36,6 +37,7 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
+            android:text="@{viewModel.amphibian.name}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Blue Jeans Frog"/>
@@ -49,6 +51,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name"/>
 
+        <!-- <CHECK> -->
         <!-- TODO: set the text to the description from the Amphibian object in the view model -->
         <TextView
             android:id="@+id/description"
@@ -56,6 +59,7 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:text="@{viewModel.amphibian.description}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name"
             tools:text="Bright red body, blue legs"/>
