--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2021 The Android Open Source Project.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,12 +14,15 @@
   ~ limitations under the License.
   -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="amphibian"
             type="com.example.amphibians.network.Amphibian" />
+
         <variable
             name="clickListener"
             type="com.example.amphibians.ui.AmphibianListener" />
@@ -32,8 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:onClick="@{() -> clickListener.onClick(amphibian)}"
-        app:cardElevation="4dp"
-        app:cardCornerRadius="4dp">
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp">
 
         <TextView
             android:id="@+id/amphibian_name"
@@ -42,9 +44,9 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:padding="8dp"
+            android:text="@{amphibian.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="18sp"
-            android:text="@{amphibian.name}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Frog" />
